debug build, investigating segfault on num4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_CXX_FLAGS "-std=c++1y -Wall -Werror")
+set(CMAKE_CXX_FLAGS "-std=c++1y -Wall -Werror -ggdb")
 
 project(stl_exer)
 
